--- a/compose.yml
+++ b/compose.yml
@@ -1,30 +1,46 @@
 services:
   db-mysql:
+    profiles:
+      - linux
     extends:
       file: ./databases/mysql/compose.yml
       service: db
   db-postgres:
+    profiles:
+      - linux
     extends:
       file: ./databases/postgres/compose.yml
       service: db
-  # db-mssql:
-  #   extends:
-  #     file: ./databases/mssql/compose.yml
-  #     service: db
-
-  app-python:
+  db-mssql:
+    profiles:
+      - windows
     extends:
-      file: ./apps/python/compose.yml
-      service: app
-    depends_on:
-      - db-mysql
-      - db-postgres
+      file: ./databases/mssql-win/compose.yml
+      service: db
+
   app-dotnet:
+    profiles:
+      - windows
     extends:
       file: ./apps/dotnet/docker-compose.yml
       service: app
     depends_on:
-      - db-mysql
-      - db-postgres
+      - db-mssql
     extra_hosts:
       - "host.docker.internal:host-gateway"
+  app-python:
+    profiles:
+      - linux
+    extends:
+      file: ./apps/python/compose.yml
+      service: app
+    depends_on:
+      - db-postgres
+  app-php:
+    profiles:
+      - linux
+    extends:
+      file: ./apps/php/compose.yml
+      service: app
+    depends_on:
+      - db-mysql
